--- a/cv.html
+++ b/cv.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./index.css">
+    <title>Primera Tarea CV</title>
 </head>
-<body>
-    <h1>Ejercicio de github</h1>
+
+<body style="background-image:url(fondocv.webp);">
+    <header>
+        <h1>CURRICULUM VITAE</h1>
+        <h2>DOLORES GALAN CORRAL</h2>
+    </header>
+
+    <div style=" text-align: right; margin-right: 20px; color:forestgreen; font-weight: bold;">
+        <img src="./FotoCarnet.png" alt="Mi foto">
+        <h3 style="color: black"><u>Datos de contacto</u></h4>
+        <p>Movil:642592243</p>
+        <p>Email:lolygalan19@gmail.com</p>
+        <a href="https://github.com/LolyGalan">www.linkedin.com/in/dolores-galán-corral</a>
+    </div>
+    <hr />
+    <div>
+        <h3><u>Formación</u></h3>
+        <ul style="list-style:square; color:forestgreen; font-weight: bold;">
+            <li>Bootcamp Full Stack Web Development <a href="./Diploma BootCamp.pdf"><mark>(Ver certificado)</mark></a>
+            </li>
+            <li>Curso Node: de cero a experto</li>
+            <li>Curso React: Aprende React js<a href="./Certificado React.pdf"><mark>(Ver certificado)</mark></a></li>
+            <li>Curso de Javascript avanzado</li>
+        </ul>
+    </div>
+    <hr />
+    <div>
+        <h3><u>Experiencia</u></h3>
+        <ol style="color:forestgreen;font-weight: bold;">
+            <li>Hélice, agencia de publicidad</li>
+            <li>NorthStar-Design, export</li>
+            <li>PWC, consultoría tecnológica</li>
+            <li>TWT, consultoría tecnológica</li>
+        </ol>
+    </div>
+    <hr />
+    <article>
+        <h3 style="text-align:center"><u>Perfil</u></h3>
+        <p id="descripcion">Desarrolladora full stack con mas de dos años de experiencia, he trabajado tanto en el backend con <span id="red-text">node js </span>como en el frontend con <span id="red-text">react js</span> y manejando bases de datos como mongo db y postgres.</p>
+        
+    </article>
+    <footer>
+        <h2>Suma siempre!!</h2>
+    </footer>
 </body>
+</body>
+
 </html>
