Mostrar el enlace como una lista

--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 </head>
 
 <body style="background-image:url(imagenCV.webp);">
-    
-        <h1 style="margin-top: 150px ;">Bienvenido a mi primera tarea de Lenguaje de marcas!!</h1>
-        <h2><a href="./cv.html">Accede a mi cv mediante este enlace</a></h2>
-    
+
+    <h1 style="margin-top: 100px ;">Bienvenido a mi primera tarea de Lenguaje de marcas!!</h1>
+    <ul>
+        <li style="list-style:none;">
+            <h2><a href="./cv.html">Accede a mi cv mediante este enlace</a></h2>
+        </li>
+    </ul>
+    <div style="text-align:center;">
+        <h2 style=" display: inline">Dolores Galan Corral</h2>
+        <h2 style=" display: inline">1º DAW</h2>
+    </div>
 </body>
 
 </html>
