Espaciando el nombre

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </li>
     </ul>
     <div style="text-align:center;">
-        <h2 style=" display: inline">Dolores Galan Corral</h2>
-        <h2 style=" display: inline">1º DAW</h2>
+        <h2 style=" display: inline">Dolores Galan Corral </h2>
+        <h2 style=" display: inline"> - 1º DAW -</h2>
     </div>
 </body>
 
